Stopgap for SVG

--- a/app/components/lattice/Cell/index.css
+++ b/app/components/lattice/Cell/index.css
@@ -113,3 +113,9 @@
   font-size: 14px;
   bottom: 15px;
 }
+
+.note {
+  font-weight: 100;
+  font-size: 14px;
+  bottom: 15px;
+}
